# verbleiber

./: CHANGELOG.md  Cargo.toml  README.md  build-linux-binary.sh  config_example.toml  config_lanresort-2022.toml
.github/workflows/: build.yml  ci.yml  release.yml  rust.yml
src/: api.rs  audio.rs  buttons.rs  cli.rs  client.rs  config.rs  devices.rs  events.rs  http.rs  main.rs  model.rs  random.rs  registration.rs  tagreader.rs  userinput.rs
