[package]
name = "verbleiber"
version = "0.6.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.76.0"
description = "Log organizer whereabouts on events via RFID tags and buttons"
readme = "README.md"
repository = "https://github.com/lanresort/verbleiber"
license = "MIT"
keywords = ["presence", "rfid"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.11", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
evdev = { version = "0.12.2" }
flume = "0.11.0"
log = { version = "0.4.22", features = ["std"] }
nanorand = "0.7.0"
rodio = { version = "0.19.0", default-features = false, features = ["vorbis"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0.0"
toml = "0.8.17"
ureq = { version = "2.10.0", features = ["json"] }
