[package]
name = "verbleiber"
version = "0.8.0"
authors = ["Jochen Kupperschmidt"]
edition = "2024"
rust-version = "1.85.0"
description = "Log organizer whereabouts on events via RFID tags and buttons"
readme = "README.md"
repository = "https://github.com/lanresort/verbleiber"
license = "MIT"
keywords = ["presence", "rfid"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
ctrlc = "3.4.7"
evdev = "0.13.1"
flume = "0.11.1"
log = { version = "0.4.27", features = ["std"] }
nanorand = "0.8.0"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0.0"
toml = "0.9.5"
ureq = { version = "3.1.0", features = ["json"] }
